# gathering

./: .gitignore  ARCHITECTURE.md  AUDIO_SERVER.md  CLEANUP_PLAN.md  CONFIGURATION.md  Cargo.toml  PLAN.md  README.md  RNNOISE.md  SECURITY.md  THIRD-PARTY-LICENSES.md  TODO.md  VIDEO_FEATURE.md  WIDGET_PLAN.md  config-example.json  gathering-cli.py
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
gathering-client/src/: tauri-bridge.js
gathering-client/src-tauri/: Cargo.toml  PLAN (1).md  tauri.conf.json
gathering-client/src-tauri/.github/workflows/: release.yml
gathering-client/src-tauri/capabilities/: default.json
gathering-client/src-tauri/src/: main.rs  midi.rs
scripts/: build-rnnoise-wasm.sh
src/: db.rs  hub.rs  lib.rs  main.rs  protocol.rs  tls.rs  turn.rs
src/db/: auth.rs  channels.rs  dms.rs  encryption.rs  files.rs  invites.rs  members.rs  messages.rs  mod.rs  preferences.rs  profiles.rs  quotas.rs  reactions.rs  roles.rs  search.rs  settings.rs  topics.rs  voice.rs  widget_state.rs
src/hub/: access.rs  admin.rs  chat.rs  dms.rs  encryption.rs  files.rs  messages.rs  mod.rs  profiles.rs  reactions.rs  topics.rs  voice.rs  widgets.rs
static/: index.html  sw.js
static/css/: styles.css
static/js/: admin.js  app.js  audio-capture-processor.js  audio-pipeline.js  audio-playback-processor.js  auth.js  chat-ui.js  config.js  crypto.js  emoji.js  files.js  input.js  messages.js  noise-gate-processor.js  notifications.js  opus-codec.js  render.js  rnnoise-processor.js  search.js  sfu-voice.js  (+9 more)
tests/: db_tests.rs  hub_tests.rs
(+8 files in other folders)
