[package]
name = "gathering"
version = "0.1.0"
edition = "2021"
description = "Self-hosted encrypted chat server"

[dependencies]
tokio = { version = "=1.36.0", features = ["full"] }
axum = { version = "=0.6.20", features = ["ws", "multipart"] }
tower = "=0.4.13"
tower-http = { version = "=0.4.4", features = ["fs", "cors"] }
serde = { version = "=1.0.196", features = ["derive"] }
serde_json = "=1.0.113"
rusqlite = { version = "=0.31.0", features = ["bundled", "backup"] }
argon2 = "=0.5.3"
rand = "=0.8.5"
getrandom = "=0.2.12"
base64 = "=0.21.7"
base64ct = "=1.6.0"
chrono = { version = "=0.4.33", default-features = false, features = ["clock", "serde", "std"] }
time = "=0.3.30"
tracing = "=0.1.40"
tracing-subscriber = { version = "=0.3.18", features = ["env-filter"] }
uuid = { version = "=1.7.0", features = ["v4", "serde"] }
futures = "=0.3.30"
password-hash = "=0.5.0"
axum-server = { version = "0.5", features = ["tls-rustls"] }
rcgen = "0.11"
regex = "1"
