[package]
name = "gathering-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
midir = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"
glib = "0.18"

[build-dependencies]
tauri-build = { version = "2", features = [] }
